Expand structured Baritone automation API
